# ocr-annotator

./: README.md  annotator.py  formatter.sh  main.py  makefile  pyproject.toml  requirements.txt  setup.py  test.py
model/: image_list.py
nimocr/: annotator.py
nimocr/model/: image_list.py
nimocr/presenter/: presenter.py
nimocr/view/: dialog.py  main_window.py  widget.py
presenter/: presenter.py
src/nimocr/model/: __init__.py  file_handler.py  image_handler.py  image_list.py
src/nimocr/presenter/: __init__.py  presenter.py
src/nimocr/view/: __init__.py  dialog.py  main_window.py  widget.py
src/nimocr/view/dialogs/: __init__.py  browse_file.py  file.py  save.py  select_column.py
src/nimocr/view/message_boxs/: __init__.py  about.py  confirm_delete.py
src/nimocr/view/widgets/: __init__.py  annotator.py  cropper.py  image.py  item.py  page.py  path.py  text.py
tests/model/: test_file_handler.py  test_image_handler.py  test_image_list.py
view/: dialog.py  main_window.py  widget.py
