[tool.poetry]
name = "nimocr"
version = "0.0.1"
description = "An annotation app for OCR training."
readme = "README.md"
authors = ["Chatcharin Sangbutsarakum <chatcharinsang@gmail.com>"]
packages = [{include = "src/nimocr"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.2"
opencv_python = "4.7.0.72"
pandas = "2.0.0"
Pillow = "9.5.0"
PyQt6 = "6.5.0"

[build-system]
requires = ["poetry-core"]
build_backend = "poetry.core.masonry.api"